# SVT

./: Makefile  README.md  pyproject.toml
examples/MinimalExample/: minimal.py
examples/ShowcaseExample/: showcase.py
svt/: SI_units.py  __init__.py  _check.py  _povmacros.py  appearence.py  data_series.py  datafile_format.py  matplotlib_visualization.py  measured_data.py  plotting.py  povray_scene.py  rendering_utils.py  stage.py  unit_collections.py  units.py
svt/data/: measured_data.py  unit_collections.py  units.py
svt/plotting/: plotting.py
svt/rendering/: renderer.py  scene.py  scene_objects.py  stage.py  utils.py
