# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "svt"
version = "0.0.1"
description = "Python software for scientific visualizations and renderings."
readme = "README.md"
authors = ["Ali Albazroun <aia@illinois.edu>"]
license = "MIT"
repository = "https://github.com/Ali-7800/SVT"
keywords = ["python", "simulation", "interactive","dashboard","rendering","plots"]

# ...
packages = [
    { include = "svt" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24"
matplotlib = "^3.3.2"
tqdm = "^4.61.1"
scipy = "^1.5.2"
dash= "^2.18.2"
dill = "^0.3.9"
dash-bootstrap-components = "^1.7.1"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
coverage = "^6.3.3"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
flake8 = "^3.8"
pre-commit = "^2.19.0"
autoflake8 = "^0.3"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]