[project]
name = "svt"
version = "0.0.1"
description = "Python software for scientific visualizations and renderings."
readme = "README.md"
authors = [
    { name = "Ali Albazroun", email = "aia@illinois.edu" }
]
license = { text = "MIT" }
keywords = ["python", "simulation", "interactive", "dashboard", "rendering", "plots"]
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.3.2",
    "tqdm>=4.61.1",
    "scipy>=1.5.2",
    "dash>=2.18.2",
    "dill>=0.3.9",
    "dash-bootstrap-components>=1.7.1"
]

[project.urls]
repository = "https://github.com/Ali-7800/SVT.git"

[dependency-groups]
dev = [
    "black>=22.3.0",
    "pytest>=7.1.2",
    "coverage>=6.3.3",
    "pytest-html>=3.1.1",
    "pytest-cov>=3.0.0",
    "flake8>=3.8",
    "pre-commit>=2.19.0",
    "autoflake8>=0.3",
    "autoflake>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["svt"]

[tool.black]
target-version = ["py38"]
line-length = 88
color = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''

[tool.pytest.ini_options]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
